[gd_scene load_steps=9 format=3 uid="uid://dbkq2oscn25te"]

[ext_resource type="Script" uid="uid://cn33xa128brrg" path="res://scripts/cafet_level.gd" id="1_g56co"]
[ext_resource type="PackedScene" uid="uid://oglixf7nir7t" path="res://scenes/game_ui.tscn" id="2_a8v1j"]
[ext_resource type="Shader" uid="uid://b3fhylgpca3t6" path="res://shaders/vhs.gdshader" id="2_a57gd"]
[ext_resource type="PackedScene" uid="uid://c78w6mwil8r3c" path="res://scenes/black_screen.tscn" id="3_556i7"]
[ext_resource type="Texture2D" uid="uid://b8lmgarjkbkbw" path="res://assets/sprites/CafetBackground.png" id="3_a57gd"]
[ext_resource type="FontFile" uid="uid://b6lq2fwhnwenq" path="res://assets/fonts/PixelOperator8.ttf" id="4_a8v1j"]
[ext_resource type="PackedScene" uid="uid://k6fa1a7vnhwd" path="res://npc.tscn" id="7_w82pu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w82pu"]
shader = ExtResource("2_a57gd")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.84
shader_parameter/scanlines_width = 0.18
shader_parameter/grille_opacity = 0.313
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 18.742
shader_parameter/roll_variation = 0.558
shader_parameter/distort_intensity = 0.005
shader_parameter/noise_opacity = 0.17
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.08
shader_parameter/aberration = 0.01
shader_parameter/brightness = 1.7
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.05
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="CafetLevel" type="Node2D"]
script = ExtResource("1_g56co")

[node name="Shaders" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Shaders"]
material = SubResource("ShaderMaterial_w82pu")
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="GameUI" parent="." instance=ExtResource("2_a8v1j")]

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(960, 540)
scale = Vector2(4, 4)
texture = ExtResource("3_a57gd")

[node name="BlackScreen" parent="." instance=ExtResource("3_556i7")]
visible = false

[node name="WorkButton" type="Button" parent="."]
offset_left = 75.0
offset_top = 806.0
offset_right = 475.0
offset_bottom = 1006.0
theme_override_fonts/font = ExtResource("4_a8v1j")
theme_override_font_sizes/font_size = 32
text = "Go back to work"

[node name="NPC" parent="." instance=ExtResource("7_w82pu")]
position = Vector2(1432, 670)
scale = Vector2(1.018, 1)

[connection signal="pressed" from="WorkButton" to="." method="_on_work_button_pressed"]
